[tool.poetry]
name = "narsad-mri-dataanalysis"
version = "0.1.0"
description = ""
authors = ["XiaoqianXiao <xiao.xiaoqian.320@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
nilearn = "^0.10.4"
bids = "^0.0"
nipype = "^1.10.0"
matplotlib = "^3.9.2"
niworkflows = "^1.11.0"
pythoninterfaces = "^0.0.2"
statsmodels = "^0.14.4"
jupyter = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
